# Chatbot

./: README.md
Coursework2/: CMakeLists.txt  README.md  app  appointments.c  appointments.h  appointments.txt  chatlog.txt  doctors.txt  main  main.c  processing.c  processing.h  replies.c  replies.h  unit_tests.c
